add privacy-policy and terms of use

--- a/translations/messages.bg.yaml
+++ b/translations/messages.bg.yaml
@@ -661,7 +661,7 @@ appointment:
         email: "Имейл"
         phone: "Телефон"
         phone_placeholder: "+359 888 123 456"
-        gdpr: "Съгласен съм с обработката на личните ми данни съгласно <a href=\"#\" target=\"_blank\">Privacy Policy</a>"
+        gdpr: "Съгласен съм с обработката на личните ми данни съгласно <a href=\"/privacy-policy\" target=\"_blank\">Политиката за поверителност</a> и <a href=\"/terms-of-service\" target=\"_blank\">Общите условия</a>"
     procedure:
         title: "Изберете услуга"
         placeholder: "Изберете услуга..."
@@ -1039,5 +1039,67 @@ barber_schedules:
 
 
 
+
+# Legal Pages
+
+legal:
+    last_updated: "Последна актуализация"
+    back_to_home: "Обратно към началната страница"
+    privacy_policy:
+        title: "Политика за поверителност"
+        section1:
+            title: "1. Въведение"
+            content: "Barber Shop (\"ние\", \"наш\" или \"компанията\") уважава вашата поверителност и се ангажира да защитава вашите лични данни. Тази политика за поверителност ще ви информира как обработваме вашите лични данни, когато посещавате нашия уебсайт и резервирате часове за услуги, както и вашите права относно поверителността."
+        section2:
+            title: "2. Какви лични данни събираме"
+            intro: "Събираме следните лични данни, когато използвате нашата услуга за онлайн резервации:"
+            item1: "Име и фамилия"
+            item2: "Имейл адрес"
+            item3: "Телефонен номер"
+        section3:
+            title: "3. Как използваме вашите данни"
+            content: "Използваме вашите лични данни единствено за целите на управлението на вашите резервации - потвърждение на часове, напомняния и комуникация относно вашите резервирани услуги. Ние НЕ споделяме вашите данни с трети страни и НЕ ги използваме за маркетингови цели без вашето изрично съгласие."
+        section4:
+            title: "4. Вашите права (GDPR)"
+            intro: "Съгласно Общия регламент за защита на данните (GDPR) имате следните права:"
+            item1: "Право на достъп - можете да поискате копие от вашите лични данни"
+            item2: "Право на коригиране - можете да коригирате неточни данни"
+            item3: "Право на изтриване - можете да поискате изтриване на вашите данни"
+            item4: "Право на ограничаване на обработката - можете да ограничите как обработваме вашите данни"
+        section5:
+            title: "5. Сигурност на данните"
+            content: "Вашите данни се съхраняват сигурно в нашата база данни с подходящи технически и организационни мерки за защита срещу неоторизиран достъп, загуба или изтриване. Достъп до вашите данни имат само оторизирани служители, които се нуждаят от тях за изпълнение на своите задължения."
+        section6:
+            title: "6. Свържете се с нас"
+            content: "Ако имате въпроси относно тази политика за поверителност или искате да упражните вашите права, моля свържете се с нас на: <a href=\"mailto:%contact_email%\" style=\"color: #d4a024;\">%contact_email%</a> или <a href=\"tel:%contact_phone_link%\" style=\"color: #d4a024;\">%contact_phone%</a>"
+    terms:
+        title: "Общи условия за ползване"
+        section1:
+            title: "1. Приемане на условията"
+            content: "Като използвате нашия уебсайт и услуги за резервация на часове, вие се съгласявате с настоящите Общи условия за ползване. Ако не сте съгласни с тези условия, моля не използвайте нашите услуги."
+        section2:
+            title: "2. Услуги за резервация"
+            intro: "Нашата платформа позволява онлайн резервация на часове за барбер услуги. При резервация вие се задължавате да:"
+            item1: "Предоставяте точна и актуална информация"
+            item2: "Уважавате резервираните часове и да пристигате навреме"
+            item3: "Уведомявате ни навреме при отмяна или промяна на резервация"
+        section3:
+            title: "3. Политика за отмени"
+            intro: "За да гарантираме качествено обслужване на всички клиенти, прилагаме следните правила:"
+            item1_title: "Отмяна от клиента:"
+            item1_content: "Можете да отменяте вашите резервации безплатно до 24 часа преди часа. Отмени в последния момент могат да доведат до ограничаване на бъдещи резервации."
+            item2_title: "No-show (неявяване):"
+            item2_content: "Ако не се явите на резервирания час без предизвестие, запазваме си правото да ограничим вашите бъдещи резервации или да изискаме предплащане."
+            item3_title: "Отмяна от барбера:"
+            item3_content: "В редки случаи може да се наложи да отменим вашия час поради непредвидени обстоятелства. В такъв случай ще ви уведомим възможно най-скоро и ще ви предложим алтернативен час."
+        section4:
+            title: "4. Цени и плащане"
+            content: "Цените за нашите услуги са посочени на уебсайта и могат да се променят без предизвестие. Плащането се извършва на място в салона след предоставената услуга. Онлайн резервациите НЕ изискват предплащане, освен ако не е посочено друго."
+        section5:
+            title: "5. Ограничение на отговорност"
+            content: "Barber Shop не носи отговорност за косвени или случайни щети, произтичащи от използването на нашите услуги. Ние полагаме усилия да осигурим безпроблемна работа на системата, но не гарантираме, че услугата ще бъде винаги достъпна или свободна от грешки."
+        section6:
+            title: "6. Контакти"
+            content: "При въпроси относно Общите условия, моля свържете се с нас на: <a href=\"mailto:%contact_email%\" style=\"color: #d4a024;\">%contact_email%</a> или <a href=\"tel:%contact_phone_link%\" style=\"color: #d4a024;\">%contact_phone%</a>"
 
 # Admin Panel
